# finial-proj-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
templates/: generate.html  index.html  index.html.tera  success.html.tera
